--- a/mirrorui/stylus/coms/docmenu.styl
+++ b/mirrorui/stylus/coms/docmenu.styl
@@ -1,22 +1,23 @@
-﻿//==文档菜单==//
+﻿if $noOutPutComAlone!=1
+    @import "../importCom"
 
-// 主题色变量
-.docmenu
+//==文档菜单==//
+$selector-docmenu='.docmenu'
+{$selector-docmenu}
+    // 主题色变量
     --t-docmenu-active-color:$gray['6']// 菜单项选中字色
     --t-docmenu-active-bg-color:$gray['2']// 菜单项选中背景色
-
-.docmenu
     @extend $ext-display-block
     // 嵌套子菜单组的缩进
     &-group &-group
         margin-left: 1em
     // 菜单项
     &-item
-        @extend $ext-display-block
+        display:block
         text-decoration: none
         padding: 4px 0 4px 2em
-        @extend $ext-weight-500
-        @extend $ext-cursor-pointer
+        font-weight:500
+        cursor:pointer
         @extend $ext-text-overflow
     // 直接子菜单项
     & > &-item
@@ -26,28 +27,28 @@
         text-decoration: underline
     // 菜单项选中
     &-item.active
-        @extend $ext-weight-700
+        font-weight:700
         color: var(--t-docmenu-active-color)
         background-color: var(--t-docmenu-active-bg-color)
         border-left:2px solid
     // 菜单组标题
     &-title
-        @extend $ext-display-flex
-        @extend $ext-align-center
-        @extend $ext-weight-700
+        display:flex
+        align-items: center
+        font-weight:700
         padding: 4px 0
-        @extend $ext-cursor-pointer
+        cursor:pointer
 
     // 菜单组标题 收起/展开图标
     &-open, &-close
-        @extend $ext-display-inline-block
-        @extend $ext-position-relative
+        display:inline-block
+        position:relative
         width:1em
         height:1em
     &-open:before, &-close:before
-        @extend $ext-content-empty
-        @extend $ext-display-inline-block
-        @extend $ext-position-absolute
+        content:''
+        display:inline-block
+        position:absolute
         width:.7em
         height:.7em
         border: 2px solid currentColor
@@ -65,7 +66,8 @@
     // 菜单组关闭
     &-group-close *:not(:first-child)
         @extend $ext-display-none
-
-{$themePre}-dark .docmenu
-    --t-docmenu-active-color:$gray['1']// 菜单项选中字色
-    --t-docmenu-active-bg-color:$gray['6']// 菜单项选中背景色
+if $themeTag is defined
+    // dark
+    {$themePre}-dark .docmenu
+        --t-docmenu-active-color:$gray['1']// 菜单项选中字色
+        --t-docmenu-active-bg-color:$gray['6']// 菜单项选中背景色
