--- a/mirrorui/stylus/theme.styl
+++ b/mirrorui/stylus/theme.styl
@@ -1,22 +1,4 @@
-﻿//=================================================================
-// 颜色主题分为黑白和彩色
-// 黑白使用黑白灰三色,浅色 + 深色(反色)是全局主题,所有元素和控件都要实现
-// 在html或者body元素上使用全局样式类:<html class="theme-dark">
-//=================================================================
-// 彩色8种 red orange yellow green sky blue purple pink
-// 控件各自实现彩色主题,只是背景字体改变的,不再做主题样式,用工具样式完成.
-// 控件在各自样式类范围定义css变量,在主题类下修改变量值,以实现彩色主题.
-// 变量命名: --t-{控件样式类}-[{控件部位元素类}]-{规则} : 值
-//=================================================================
-// 全局彩色主题
-// 部分控件实现:表格/侧边菜单/缓存导航页
-//=================================================================
-
-//========================
-// light(默认)
-// 对字体和背景的全局设定
-//========================
-// 全局变量
+﻿// 全局主题颜色变量
 :root
     --back-color:$white['0']// 背景色
     --front-color:$black['1']// 前景色,字体颜色
@@ -24,50 +6,15 @@
 body
     color: $front-color
     background-color: $back-color
-
-// 主题样式名前缀,用大括号引用: {$themePre}
-$themePre='.theme'
-
 //========================
 // dark(暗色),颠倒黑白
 //========================
-{$themePre}-dark
-    color-scheme: dark// 这个规则将滚动条颜色设为深色
-    --back-color: $black['1']// 背景色
-    --front-color: $white['1']// 前景(字体)色
-    --border-color:$gray['6']// 边框色
-
-// 彩色主题名字及颜色字典
-$theme-name-colors-dict={
-    red:$red,
-    orange:$orange,
-    yellow:$yellow,
-    green:$green,
-    lime:$lime,
-    teal:$teal,
-    sky:$sky,
-    blue:$blue,
-    purple:$purple,
-    pink:$pink,
-    rose:$rose
-}
-//for k,v in $theme-name-colors-dict
-//    .{t}
-//        color:v['1']
-
-//====================================
-// 格式约定
-// 在页面头部定义主题色变量,在尾部修改值
-//====================================
-
-/*
-// 主题色变量
-.control
-    --t-xx-xx:val
-    
-// 彩色主题
-if $theme-name-colors-dict is defined
-    for k,v in $theme-name-colors-dict
-        .xx.{k},{$themePre}-{k} .xx
-            --t-xx-xx:val:v['5']
-*/
+// 全局主题前缀
+$themePre='.theme'
+// 全局主题影响范围:背景色,字体色,边框,滚动条
+if $themeTag is defined
+    {$themePre}-dark
+        color-scheme: dark// 这个规则将滚动条颜色设为深色
+        --back-color: $black['1']// 背景色
+        --front-color: $white['1']// 前景(字体)色
+        --border-color:$gray['6']// 边框色
